--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@lit/context": "1.1.0",
     "@lit/task": "1.0.0",
     "lit": "3.1.2",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "viem": "2.7.22"
   },
   "devDependencies": {
     "@nx/eslint": "18.0.4",
