--- a/libs/ui-components/package.json
+++ b/libs/ui-components/package.json
@@ -1,7 +1,11 @@
 {
   "name": "ui-components",
   "version": "0.0.1",
-  "dependencies": {},
-  "type": "commonjs",
-  "main": "./index.cjs"
+  "peerDependencies": {
+    "@lit/context": "1.1.x",
+    "@lit/task": "1.0.x",
+    "lit": "3.1.x",
+    "tslib": "2.3.0",
+    "viem": "2.7.22"
+  }
 }
