--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "dependencies": {
     "@lit/context": "1.1.0",
     "@lit/task": "1.0.0",
+    "@vaadin/router": "^1.7.5",
     "lit": "3.1.2",
     "tslib": "^2.3.0",
-    "viem": "2.7.22"
+    "viem": "2.8.9"
   },
   "devDependencies": {
     "@nx/eslint": "18.0.4",
@@ -43,6 +44,7 @@
     "ts-lit-plugin": "^2.0.2",
     "ts-node": "10.9.1",
     "typescript": "~5.3.3",
+    "verdaccio": "^5.0.4",
     "vite": "~5.0.0",
     "vite-plugin-dts": "~2.3.0",
     "vitest": "^1.0.4"
