--- a/libs/widgets/project.json
+++ b/libs/widgets/project.json
@@ -8,7 +8,7 @@
       "executor": "nx:run-commands",
       "options": {
         "commands": [
-          "rollup -c libs/widgets/rollup.config.js --bundleConfigAsCjs"
+          "node tools/esbuild/build.mjs --lib-name widgets"
         ]
       }
     },
@@ -16,7 +16,7 @@
       "executor": "nx:run-commands",
       "options": {
         "commands": [
-          "rollup -c libs/widgets/rollup.config.js --bundleConfigAsCjs -w --watch.buildDelay 500"
+          "node tools/esbuild/build.mjs --lib-name widgets --watch"
         ]
       }
     },
