--- a/package.json
+++ b/package.json
@@ -35,8 +35,11 @@
     "@typescript-eslint/parser": "^6.13.2",
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.0.4",
+    "arg": "^5.0.2",
     "concurrently": "^8.2.2",
     "dotenv": "^16.4.5",
+    "dts-bundle-generator": "^9.3.1",
+    "esbuild": "0.20.2",
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.0.0",
     "jsdom": "~22.1.0",
