--- a/libs/sdk/project.json
+++ b/libs/sdk/project.json
@@ -8,7 +8,7 @@
       "executor": "nx:run-commands",
       "options": {
         "commands": [
-          "time node tools/esbuild/build.mjs --lib-name sdk"
+          "rollup -c libs/sdk/rollup.config.js --bundleConfigAsCjs"
         ]
       }
     },
@@ -16,7 +16,7 @@
       "executor": "nx:run-commands",
       "options": {
         "commands": [
-          "time node tools/esbuild/build.mjs --lib-name sdk --watch"
+          "node tools/esbuild/build.mjs --lib-name sdk --watch"
         ]
       }
     },
