fix error log in builder

--- a/libs/models/package.json
+++ b/libs/models/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "sdk",
+  "name": "models",
   "version": "0.0.1",
   "peerDependencies": {
-    "dexie": "3.2.x",
     "tslib": "2.3.0",
     "viem": "2.9.x"
   }
