--- a/libs/models/project.json
+++ b/libs/models/project.json
@@ -3,6 +3,23 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/models/src",
   "projectType": "library",
-  "targets": {},
+  "targets": {
+    "build": {
+      "executor": "nx:run-commands",
+      "options": {
+        "commands": [
+          "node tools/esbuild/build.mjs --lib-name models"
+        ]
+      }
+    },
+    "watch": {
+      "executor": "nx:run-commands",
+      "options": {
+        "commands": [
+          "node tools/esbuild/build.mjs --lib-name models --watch"
+        ]
+      }
+    }
+  },
   "tags": []
 }
