--- a/libs/sdk/project.json
+++ b/libs/sdk/project.json
@@ -8,7 +8,7 @@
       "executor": "nx:run-commands",
       "options": {
         "commands": [
-          "rollup -c libs/sdk/rollup.config.js --bundleConfigAsCjs"
+          "node tools/esbuild/build.mjs --lib-name sdk"
         ]
       }
     },
