--- a/libs/sdk/tsconfig.lib.json
+++ b/libs/sdk/tsconfig.lib.json
@@ -2,6 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "declaration": true,
+    "skipLibCheck": true,
     "useDefineForClassFields": false,
     "experimentalDecorators": true,
     "types": ["node"],
