--- a/apps/dapp/project.json
+++ b/apps/dapp/project.json
@@ -9,7 +9,10 @@
       "executor": "nx:run-commands",
       "options": {
         "command": "nx run dapp:build && firebase deploy"
-      }
+      },
+      "dependsOn": [
+        "^build"
+      ]
     }
   }
 }
