--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
   "name": "one-inch-community",
   "version": "0.1.0-preview",
   "license": "MIT",
-  "scripts": {
-    "dts": "dts-bundle-generator ./libs/widgets/src/lib/select-token/public-api.ts",
-    "postinstall": "sh ./scripts/postinstall.sh"
-  },
+  "scripts": {},
   "private": true,
   "dependencies": {
     "@lit-labs/virtualizer": "^2.0.12",
@@ -14,10 +11,14 @@
     "@maskito/core": "2.2.0",
     "@maskito/kit": "2.2.0",
     "@vaadin/router": "1.7.5",
+    "@walletconnect/ethereum-provider": "2.12.2",
+    "@walletconnect/modal": "2.6.2",
+    "@walletconnect/universal-provider": "2.12.2",
     "dexie": "3.2.7",
+    "eventemitter3": "^5.0.1",
     "lit": "3.1.2",
     "rxjs": "7.8.1",
-    "tslib": "^2.3.0",
+    "tslib": "^2.6.2",
     "viem": "2.9.6"
   },
   "devDependencies": {
@@ -32,24 +33,24 @@
     "@rollup/plugin-replace": "^5.0.5",
     "@rollup/plugin-typescript": "^11.1.6",
     "@swc-node/register": "~1.8.0",
-    "@swc/core": "~1.3.85",
-    "@swc/helpers": "~0.5.2",
+    "@swc/core": "~1.3.107",
+    "@swc/helpers": "~0.5.11",
     "@types/node": "18.16.9",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
-    "@vitest/coverage-v8": "^1.0.4",
-    "@vitest/ui": "^1.0.4",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "@vitest/coverage-v8": "^1.5.3",
+    "@vitest/ui": "^1.5.3",
     "arg": "^5.0.2",
     "concurrently": "^8.2.2",
     "dotenv": "^16.4.5",
-    "dts-bundle-generator": "^9.3.1",
+    "dts-bundle-generator": "^9.5.1",
     "esbuild": "0.20.2",
     "eslint": "~8.48.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-prettier": "^9.1.0",
     "jsdom": "~22.1.0",
     "nx": "18.0.4",
-    "prettier": "^2.6.2",
-    "rollup": "^4.12.0",
+    "prettier": "^2.8.8",
+    "rollup": "^4.17.2",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-generate-package-json": "^3.2.0",
@@ -57,10 +58,10 @@
     "ts-lit-plugin": "^2.0.2",
     "ts-node": "10.9.1",
     "typescript": "~5.3.3",
-    "verdaccio": "^5.0.4",
-    "vite": "~5.0.0",
+    "verdaccio": "^5.30.3",
+    "vite": "~5.0.13",
     "vite-plugin-dts": "~2.3.0",
-    "vitest": "^1.0.4"
+    "vitest": "^1.5.3"
   },
   "nx": {
     "includedScripts": []
