--- a/env.example
+++ b/env.example
@@ -1,3 +1,4 @@
 ONE_INCH_DEV_PORTAL_HOST={{proxy host}}
 WALLET_CONNECT_PROJECT_ID={{wallet connect project id}}
 ELECTRON_RENDERER_HOST=http://localhost:4200
+GIT_HUB_RELEASES_TOKEN={{token}}
