--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -42,16 +42,9 @@
         "dist/libs/models/index",
         "dist/libs/models/*"
       ],
-      "@one-inch-community/sdk": [
-        "dist/libs/sdk/index",
-        "dist/libs/sdk/*"
-      ],
-      "@one-inch-community/ui-components/*": [
-        "dist/libs/ui-components/*"
-      ],
-      "@one-inch-community/widgets/*": [
-        "dist/libs/widgets/*"
-      ]
+      "@one-inch-community/sdk": ["dist/libs/sdk/index", "dist/libs/sdk/*"],
+      "@one-inch-community/ui-components/*": ["dist/libs/ui-components/*"],
+      "@one-inch-community/widgets/*": ["dist/libs/widgets/*"]
     }
   },
   "exclude": ["node_modules", "tmp"]
