--- a/libs/sdk/tsconfig.lib.json
+++ b/libs/sdk/tsconfig.lib.json
@@ -16,6 +16,6 @@
     "sourceMap": true,
     "declarationMap": true
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*"],
   "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"]
 }
