--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0-preview",
   "license": "MIT",
   "scripts": {
-    "start": "nx run one-inch-community:start"
+    "start": "nx run one-inch-community:start",
+    "build": "ts-node ./tools/packagr/main.ts",
+    "build:sdk": "ts-node --project ./tsconfig.build.json tools/packagr/main.ts --lib-name sdk"
   },
   "private": true,
   "dependencies": {
@@ -24,6 +26,7 @@
     "viem": "2.9.6"
   },
   "devDependencies": {
+    "@microsoft/api-extractor": "^7.43.3",
     "@nx/eslint": "18.0.4",
     "@nx/eslint-plugin": "18.0.4",
     "@nx/js": "18.0.4",
@@ -37,21 +40,25 @@
     "@swc-node/register": "~1.8.0",
     "@swc/core": "~1.3.107",
     "@swc/helpers": "~0.5.11",
+    "@types/blessed": "^0.1.25",
     "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitest/coverage-v8": "^1.5.3",
     "@vitest/ui": "^1.5.3",
     "arg": "^5.0.2",
+    "blessed": "^0.1.81",
     "concurrently": "^8.2.2",
     "dotenv": "^16.4.5",
     "dts-bundle-generator": "^9.5.1",
     "esbuild": "0.20.2",
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.1.0",
+    "ink": "^4.4.1",
     "jsdom": "~22.1.0",
     "nx": "18.0.4",
     "prettier": "^2.8.8",
+    "react": "^18.3.1",
     "rollup": "^4.17.2",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-dts": "^6.1.0",
