--- a/libs/widgets/package.json
+++ b/libs/widgets/package.json
@@ -2,11 +2,13 @@
   "name": "widgets",
   "version": "0.0.1",
   "peerDependencies": {
+    "@one-inch-community/models": "0.1.x",
     "@lit-labs/virtualizer": "2.0.x",
     "@lit/context": "1.1.x",
     "@lit/task": "1.0.x",
     "lit": "3.1.x",
     "tslib": "2.3.0",
-    "viem": "2.9.x"
+    "viem": "2.9.x",
+    "rxjs": "7.x.x"
   }
 }
