--- a/libs/models/package.json
+++ b/libs/models/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "peerDependencies": {
     "tslib": "2.3.0",
-    "viem": "2.9.x"
+    "viem": "2.9.x",
+    "rxjs": "7.x.x"
   }
 }
