--- a/libs/ui-components/package.json
+++ b/libs/ui-components/package.json
@@ -2,10 +2,13 @@
   "name": "ui-components",
   "version": "0.0.1",
   "peerDependencies": {
+    "@one-inch-community/models": "0.1.x",
+    "@one-inch-community/lit": "0.1.x",
     "@lit/context": "1.1.x",
     "@lit/task": "1.0.x",
     "lit": "3.1.x",
     "tslib": "2.3.0",
-    "viem": "2.9.x"
+    "viem": "2.9.x",
+    "rxjs": "7.8.x"
   }
 }
