--- a/libs/widgets/project.json
+++ b/libs/widgets/project.json
@@ -7,8 +7,11 @@
     "build": {
       "executor": "nx:run-commands",
       "options": {
+        "env": {
+          "libName": "widgets"
+        },
         "commands": [
-          "node tools/esbuild/build.mjs --lib-name widgets"
+          "ts-node --project ./tools/packagr/tsconfig.json tools/packagr/main.ts"
         ]
       }
     },
