--- a/project.json
+++ b/project.json
@@ -14,6 +14,14 @@
           "nx run dapp:serve"
         ]
       }
+    },
+    "build-all-libs": {
+      "executor": "nx:run-commands",
+      "options": {
+        "commands": [
+          "ts-node --project ./tools/packagr/tsconfig.json tools/packagr/main.ts"
+        ]
+      }
     }
   }
 }
