finished implementation new lib builder

--- a/project.json
+++ b/project.json
@@ -5,12 +5,9 @@
     "start": {
       "executor": "nx:run-commands",
       "options": {
-        "parallel": false,
+        "parallel": true,
         "commands": [
-          "nx run models:build",
-          "nx run ui-components:build",
-          "nx run sdk:build",
-          "nx run widgets:build",
+          "nx run one-inch-community:watch-all-libs",
           "nx run dapp:serve"
         ]
       }
@@ -18,6 +15,17 @@
     "build-all-libs": {
       "executor": "nx:run-commands",
       "options": {
+        "commands": [
+          "ts-node --project ./tools/packagr/tsconfig.json tools/packagr/main.ts"
+        ]
+      }
+    },
+    "watch-all-libs": {
+      "executor": "nx:run-commands",
+      "options": {
+        "env": {
+          "isWatch": true
+        },
         "commands": [
           "ts-node --project ./tools/packagr/tsconfig.json tools/packagr/main.ts"
         ]
