--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "license": "MIT",
   "scripts": {
     "start": "nx run one-inch-community:start",
-    "build": "ts-node ./tools/packagr/main.ts",
-    "build:sdk": "ts-node --project ./tsconfig.build.json tools/packagr/main.ts --lib-name sdk"
+    "postinstall": "nx run one-inch-community:build-all-libs"
   },
   "private": true,
   "dependencies": {
@@ -32,11 +31,6 @@
     "@nx/js": "18.0.4",
     "@nx/vite": "18.0.4",
     "@nx/web": "18.0.4",
-    "@rollup/plugin-commonjs": "^25.0.7",
-    "@rollup/plugin-dynamic-import-vars": "^2.1.2",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-replace": "^5.0.5",
-    "@rollup/plugin-typescript": "^11.1.6",
     "@swc-node/register": "~1.8.0",
     "@swc/core": "~1.3.107",
     "@swc/helpers": "~0.5.11",
@@ -46,23 +40,12 @@
     "@typescript-eslint/parser": "^6.21.0",
     "@vitest/coverage-v8": "^1.5.3",
     "@vitest/ui": "^1.5.3",
-    "arg": "^5.0.2",
-    "blessed": "^0.1.81",
-    "concurrently": "^8.2.2",
-    "dotenv": "^16.4.5",
-    "dts-bundle-generator": "^9.5.1",
     "esbuild": "0.20.2",
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.1.0",
-    "ink": "^4.4.1",
     "jsdom": "~22.1.0",
     "nx": "18.0.4",
     "prettier": "^2.8.8",
-    "react": "^18.3.1",
-    "rollup": "^4.17.2",
-    "rollup-plugin-delete": "^2.0.0",
-    "rollup-plugin-dts": "^6.1.0",
-    "rollup-plugin-generate-package-json": "^3.2.0",
     "swc-loader": "0.1.15",
     "ts-lit-plugin": "^2.0.2",
     "ts-node": "10.9.1",
