--- a/libs/lit/project.json
+++ b/libs/lit/project.json
@@ -12,15 +12,20 @@
           "oneModuleLibrary": true
         },
         "commands": [
-          "ts-node --project ./tools/packagr/tsconfig.json tools/packagr/main.ts"
+          "pnpm run build:lib"
         ]
       }
     },
     "watch": {
       "executor": "nx:run-commands",
       "options": {
+        "env": {
+          "libName": "lit",
+          "oneModuleLibrary": true,
+          "isWatch": true
+        },
         "commands": [
-          "node tools/esbuild/build.mjs --lib-name lit --watch"
+          "pnpm run build:lib"
         ]
       }
     },
