--- a/libs/widgets/project.json
+++ b/libs/widgets/project.json
@@ -11,15 +11,19 @@
           "libName": "widgets"
         },
         "commands": [
-          "ts-node --project ./tools/packagr/tsconfig.json tools/packagr/main.ts"
+          "pnpm run build:lib"
         ]
       }
     },
     "watch": {
       "executor": "nx:run-commands",
       "options": {
+        "env": {
+          "libName": "widgets",
+          "isWatch": true
+        },
         "commands": [
-          "node tools/esbuild/build.mjs --lib-name widgets --watch"
+          "pnpm run build:lib"
         ]
       }
     },
