--- a/apps/electron-dapp/project.json
+++ b/apps/electron-dapp/project.json
@@ -17,10 +17,22 @@
       "options": {
         "cwd": "apps/electron-dapp",
         "parallel": false,
+        "env": {
+          "killClone": "true"
+        },
         "commands": [
+          "nx run one-inch-community:build-all-libs",
+          "nx run dapp:build:electron",
           "electron-vite build --entry ./out/main/index.js",
           "electron-builder -c ./electron-builder.yml build"
         ]
+      }
+    },
+    "publish": {
+      "executor": "nx:run-commands",
+      "options": {
+        "cwd": "apps/electron-dapp",
+        "command": "electron-builder --publish always"
       }
     }
   }
