--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "license": "MIT",
   "scripts": {
     "start": "nx run one-inch-community:start",
-    "postinstall": "nx run one-inch-community:build-all-libs"
+    "postinstall": "nx run one-inch-community:build-all-libs",
+    "build:lib": "ts-node --project ./tools/packagr/tsconfig.json tools/packagr/main.ts"
   },
-  "private": true,
   "dependencies": {
     "@lit-labs/virtualizer": "^2.0.12",
     "@lit/context": "1.1.0",
@@ -31,6 +31,9 @@
     "@nx/js": "18.0.4",
     "@nx/vite": "18.0.4",
     "@nx/web": "18.0.4",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^10.0.3",
     "@swc-node/register": "~1.8.0",
     "@swc/core": "~1.3.107",
     "@swc/helpers": "~0.5.11",
@@ -46,6 +49,7 @@
     "jsdom": "~22.1.0",
     "nx": "18.0.4",
     "prettier": "^2.8.8",
+    "semantic-release": "^23.1.1",
     "swc-loader": "0.1.15",
     "ts-lit-plugin": "^2.0.2",
     "ts-node": "10.9.1",
@@ -53,16 +57,28 @@
     "verdaccio": "^5.30.3",
     "vite": "~5.0.13",
     "vite-plugin-dts": "~2.3.0",
+    "vite-plugin-html": "^3.2.2",
     "vitest": "^1.5.3"
   },
   "nx": {
     "includedScripts": []
   },
-  "main": "apps/electron-dapp/out/main/index.js",
-  "publish": {
-    "provider": "github",
-    "owner": "${env.GIT_HUB_RELEASES_USER_NAME}",
-    "repo": "${env.GIT_HUB_RELEASES_REPO_NAME}",
-    "token": "${env.GIT_HUB_RELEASES_TOKEN}"
+  "release": {
+    "branches": ["desktop-dapp"],
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/changelog",
+      "@semantic-release/github",
+      [
+        "@semantic-release/git",
+        {
+          "assets": [
+            "package.json"
+          ],
+          "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+        }
+      ]
+    ]
   }
 }
