--- a/.releaserc
+++ b/.releaserc
@@ -15,8 +15,10 @@
       "@semantic-release/github",
       {
         "assets": [
-          {"path": "dist/*.dmg"},
-          {"path": "dist/*.zip"}
+          {"path": "apps/electron-dapp/dist/*.dmg"},
+          {"path": "apps/electron-dapp/dist/*.zip"},
+          {"path": "apps/electron-dapp/dist/*.exe"},
+          {"path": "apps/electron-dapp/dist/*.AppImage"},
         ]
       }
     ]
