feat: added app icons for electron dapp

--- a/.releaserc
+++ b/.releaserc
@@ -12,6 +12,18 @@
       }
     ],
     [
+      @semantic-release/npm",
+      {
+        "npmPublish": false
+      }
+    ],
+    [
+      "@semantic-release/exec",
+        {
+          "prepareCmd": "node tools/scripts/update-versions.js ${nextRelease.version}"
+        }
+    ],
+    [
       "@semantic-release/github",
       {
         "assets": [
