--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "@nx/vite": "18.0.4",
     "@nx/web": "18.0.4",
     "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^10.0.3",
+    "@semantic-release/npm": "^12.0.1",
     "@swc-node/register": "~1.8.0",
     "@swc/core": "~1.3.107",
     "@swc/helpers": "~0.5.11",
