--- a/.releaserc.json
+++ b/.releaserc.json
@@ -12,7 +12,7 @@
       }
     ],
     [
-      @semantic-release/npm",
+      "@semantic-release/npm",
       {
         "npmPublish": false
       }
