--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "one-inch-community",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "license": "MIT",
   "scripts": {
     "start": "nx run one-inch-community:start",
@@ -31,7 +31,7 @@
     "@nx/js": "18.0.4",
     "@nx/vite": "18.0.4",
     "@nx/web": "18.0.4",
-    "@semantic-release/changelog": "^6.0.3",
+    "@p/changelog": "^6.0.3",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^10.0.3",
