--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@nx/js": "18.0.4",
     "@nx/vite": "18.0.4",
     "@nx/web": "18.0.4",
-    "@p/changelog": "^6.0.3",
+    "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^10.0.3",
