--- a/apps/electron-dapp/package.json
+++ b/apps/electron-dapp/package.json
@@ -13,6 +13,7 @@
     "electron": "^30.0.4",
     "electron-builder": "^24.13.3",
     "electron-log": "^5.1.4",
+    "electron-notarize": "^1.2.2",
     "electron-store": "9.0.0",
     "electron-updater": "^6.1.8",
     "electron-vite": "^2.2.0"
