feat: added tests action for github actions
fix: fix test running

--- a/apps/electron-dapp/project.json
+++ b/apps/electron-dapp/project.json
@@ -21,6 +21,8 @@
           "killClone": "true"
         },
         "commands": [
+          "nx run one-inch-community:build-all-libs",
+          "nx run dapp:build:electron",
           "electron-vite build --entry ./out/main/index.js",
           "electron-builder -c ./electron-builder.yml build -mwl"
         ]
