--- a/libs/sdk/project.json
+++ b/libs/sdk/project.json
@@ -33,8 +33,11 @@
       "executor": "@nx/vite:test",
       "outputs": ["{options.reportsDirectory}"],
       "options": {
-        "reportsDirectory": "../../coverage/temp/ui-components"
-      }
+        "reportsDirectory": "../../coverage/temp/sdk"
+      },
+      "dependsOn": [
+        { "projects": "models", "target": "build" }
+      ]
     }
   },
   "tags": []
