--- a/libs/ui-components/project.json
+++ b/libs/ui-components/project.json
@@ -32,7 +32,11 @@
       "outputs": ["{options.reportsDirectory}"],
       "options": {
         "reportsDirectory": "../../coverage/temp/ui-components"
-      }
+      },
+      "dependsOn": [
+        { "projects": "models", "target": "build" },
+        { "projects": "lit", "target": "build" }
+      ]
     }
   },
   "tags": []
