--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,23 +6,15 @@ on:
       - desktop-dapp
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  call-common-jobs:
+    uses: ./.github/workflows/common-jobs.yml
 
+  run-tests:
+    runs-on: ubuntu-latest
+    needs: call-common-jobs
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '20'
-
-      - name: Install pnpm
-        run: npm install -g pnpm
-
-      - name: Install dependencies
-        run: pnpm install
-
-      - name: Run tests
+      - name: Run tests for all projects
         run: npx nx run-many --target=test --all
