--- a/libs/lit/project.json
+++ b/libs/lit/project.json
@@ -12,23 +12,21 @@
           "oneModuleLibrary": true
         },
         "commands": [
-          "ts-node --project ./tools/packagr/tsconfig.json tools/packagr/main.ts"
+          "pnpm run build:lib"
         ]
       }
     },
     "watch": {
       "executor": "nx:run-commands",
       "options": {
+        "env": {
+          "libName": "lit",
+          "oneModuleLibrary": true,
+          "isWatch": true
+        },
         "commands": [
-          "node tools/esbuild/build.mjs --lib-name lit --watch"
+          "pnpm run build:lib"
         ]
-      }
-    },
-    "test": {
-      "executor": "@nx/vite:test",
-      "outputs": ["{options.reportsDirectory}"],
-      "options": {
-        "reportsDirectory": "../../coverage/temp/ui-components"
       }
     }
   },
