--- a/apps/dapp/project.json
+++ b/apps/dapp/project.json
@@ -13,6 +13,12 @@
       "dependsOn": [
         "^build"
       ]
+    },
+    "build:electron": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "nx run dapp:build --mode electron"
+      }
     }
   }
 }
