--- a/libs/sdk/project.json
+++ b/libs/sdk/project.json
@@ -12,7 +12,7 @@
           "oneModuleLibrary": true
         },
         "commands": [
-          "ts-node --project ./tools/packagr/tsconfig.json tools/packagr/main.ts"
+          "pnpm run build:lib"
         ]
       }
     },
@@ -25,7 +25,7 @@
           "isWatch": true
         },
         "commands": [
-          "ts-node --project ./tools/packagr/tsconfig.json tools/packagr/main.ts"
+          "pnpm run build:lib"
         ]
       }
     },
@@ -33,8 +33,11 @@
       "executor": "@nx/vite:test",
       "outputs": ["{options.reportsDirectory}"],
       "options": {
-        "reportsDirectory": "../../coverage/temp/ui-components"
-      }
+        "reportsDirectory": "../../coverage/temp/sdk"
+      },
+      "dependsOn": [
+        { "projects": "models", "target": "build" }
+      ]
     }
   },
   "tags": []
