--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "one-inch-community",
-  "version": "0.1.0-preview",
+  "version": "1.3.2",
   "license": "MIT",
   "scripts": {
     "start": "nx run one-inch-community:start",
-    "postinstall": "nx run one-inch-community:build-all-libs"
+    "postinstall": "nx run one-inch-community:build-all-libs",
+    "build:lib": "ts-node --project ./tools/packagr/tsconfig.json tools/packagr/main.ts"
   },
-  "private": true,
   "dependencies": {
     "@lit-labs/virtualizer": "^2.0.12",
     "@lit/context": "1.1.0",
@@ -31,6 +31,11 @@
     "@nx/js": "18.0.4",
     "@nx/vite": "18.0.4",
     "@nx/web": "18.0.4",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/exec": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^10.0.3",
+    "@semantic-release/npm": "^12.0.1",
     "@swc-node/register": "~1.8.0",
     "@swc/core": "~1.3.107",
     "@swc/helpers": "~0.5.11",
@@ -46,6 +51,7 @@
     "jsdom": "~22.1.0",
     "nx": "18.0.4",
     "prettier": "^2.8.8",
+    "semantic-release": "^23.1.1",
     "swc-loader": "0.1.15",
     "ts-lit-plugin": "^2.0.2",
     "ts-node": "10.9.1",
@@ -53,9 +59,7 @@
     "verdaccio": "^5.30.3",
     "vite": "~5.0.13",
     "vite-plugin-dts": "~2.3.0",
+    "vite-plugin-html": "^3.2.2",
     "vitest": "^1.5.3"
-  },
-  "nx": {
-    "includedScripts": []
   }
 }
