--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,15 +7,19 @@ on:
       - main
 
 jobs:
-  call-common-jobs:
-    uses: .github/jobs/common-jobs.yml
-
   run-tests:
     runs-on: ubuntu-latest
-    needs: call-common-jobs
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+
+      - name: Setup environment
+        uses: ./.github/actions/setup-environment
+        with:
+          node-version: ${{ vars.NODE_VERSION }}
+
+      - name: Pnpm version
+        run: pnpm -v
 
       - name: Run tests for all projects
         run: npx nx run-many --target=test --all
