--- a/libs/widgets/.eslintrc.json
+++ b/libs/widgets/.eslintrc.json
@@ -16,15 +16,7 @@
     },
     {
       "files": ["*.json"],
-      "parser": "jsonc-eslint-parser",
-      "rules": {
-        "@nx/dependency-checks": [
-          "error",
-          {
-            "ignoredFiles": ["{projectRoot}/vite.config.{js,ts,mjs,mts}"]
-          }
-        ]
-      }
+      "parser": "jsonc-eslint-parser"
     }
   ]
 }
