--- a/.github/workflows/dev-pipeline.yml
+++ b/.github/workflows/dev-pipeline.yml
@@ -6,7 +6,7 @@ on:
       - dev
 
 jobs:
-  run-check:
+  check:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -26,8 +26,33 @@ jobs:
       - name: Run tests for all projects
         run: npx nx run-many --target=test --all
 
-  run-release:
-    runs-on: ubuntu-latest
+#  run-release:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout repository
+#        uses: actions/checkout@v2
+#
+#      - name: Setup environment
+#        uses: ./.github/actions/setup-environment
+#        with:
+#          node-version: ${{ vars.NODE_VERSION }}
+#
+#      - name: Install dependencies for electron-dapp
+#        run: |
+#          cd apps/electron-dapp
+#          pnpm install --ignore-scripts
+#
+#      - name: Build electron
+#        run: npx nx run electron-dapp:build
+#
+#      - name: Release
+#        run: npx semantic-release
+#        env:
+#          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+
+  release:
+    runs-on: macos-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -37,15 +62,10 @@ jobs:
         with:
           node-version: ${{ vars.NODE_VERSION }}
 
-      - name: Install dependencies for electron-dapp
+      - name: Install electron dependencies
         run: |
           cd apps/electron-dapp
-          pnpm install --ignore-scripts
+          pnpm install --frozen-lockfile
 
-      - name: Build electron
+      - name: Package electron app
         run: npx nx run electron-dapp:build
-
-      - name: Release
-        run: npx semantic-release
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
