--- a/apps/electron-dapp/package.json
+++ b/apps/electron-dapp/package.json
@@ -6,17 +6,17 @@
     "start": "electron-vite dev"
   },
   "devDependencies": {
-    "@electron-toolkit/preload": "^3.0.1",
-    "@electron-toolkit/tsconfig": "^1.0.1",
-    "@electron-toolkit/utils": "^3.0.0",
-    "dmg-license": "^1.0.11",
-    "dotenv": "^16.4.5",
-    "electron": "^30.0.4",
-    "electron-builder": "^24.13.3",
-    "electron-log": "^5.1.4",
-    "electron-notarize": "^1.2.2",
+    "@electron-toolkit/preload": "3.0.1",
+    "@electron-toolkit/tsconfig": "1.0.1",
+    "@electron-toolkit/utils": "3.0.0",
+    "@electron/notarize": "2.3.2",
+    "dmg-license": "1.0.11",
+    "dotenv": "16.4.5",
+    "electron": "30.0.6",
+    "electron-builder": "24.13.3",
+    "electron-log": "5.1.4",
     "electron-store": "9.0.0",
-    "electron-updater": "^6.1.8",
-    "electron-vite": "^2.2.0"
+    "electron-updater": "6.1.8",
+    "electron-vite": "2.2.0"
   }
 }
