--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:lib": "ts-node --project ./tools/packagr/tsconfig.json tools/packagr/main.ts"
   },
   "dependencies": {
-    "@lit-labs/virtualizer": "^2.0.12",
+    "@lit-labs/virtualizer": "2.0.12",
     "@lit/context": "1.1.0",
     "@lit/task": "1.0.0",
     "@maskito/core": "2.2.0",
@@ -18,48 +18,48 @@
     "@walletconnect/modal": "2.6.2",
     "@walletconnect/universal-provider": "2.12.2",
     "dexie": "3.2.7",
-    "eventemitter3": "^5.0.1",
+    "eventemitter3": "5.0.1",
     "lit": "3.1.2",
     "rxjs": "7.8.1",
-    "tslib": "^2.6.2",
+    "tslib": "2.6.2",
     "viem": "2.9.6"
   },
   "devDependencies": {
-    "@microsoft/api-extractor": "^7.43.3",
+    "@microsoft/api-extractor": "7.43.7",
     "@nx/eslint": "18.0.4",
     "@nx/eslint-plugin": "18.0.4",
     "@nx/js": "18.0.4",
     "@nx/vite": "18.0.4",
     "@nx/web": "18.0.4",
-    "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/exec": "^6.0.3",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^10.0.3",
-    "@semantic-release/npm": "^12.0.1",
-    "@swc-node/register": "~1.8.0",
-    "@swc/core": "~1.3.107",
-    "@swc/helpers": "~0.5.11",
-    "@types/blessed": "^0.1.25",
+    "@semantic-release/changelog": "6.0.3",
+    "@semantic-release/exec": "6.0.3",
+    "@semantic-release/git": "10.0.1",
+    "@semantic-release/github": "10.0.4",
+    "@semantic-release/npm": "12.0.1",
+    "@swc-node/register": "1.8.0",
+    "@swc/core": "1.3.107",
+    "@swc/helpers": "0.5.11",
+    "@types/blessed": "0.1.25",
     "@types/node": "18.16.9",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "@vitest/coverage-v8": "^1.5.3",
-    "@vitest/ui": "^1.5.3",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
+    "@vitest/coverage-v8": "1.6.0",
+    "@vitest/ui": "1.6.0",
     "esbuild": "0.20.2",
-    "eslint": "~8.48.0",
-    "eslint-config-prettier": "^9.1.0",
-    "jsdom": "~22.1.0",
+    "eslint": "8.48.0",
+    "eslint-config-prettier": "9.1.0",
+    "jsdom": "22.1.0",
     "nx": "18.0.4",
-    "prettier": "^2.8.8",
-    "semantic-release": "^23.1.1",
+    "prettier": "2.8.8",
+    "semantic-release": "23.1.1",
     "swc-loader": "0.1.15",
-    "ts-lit-plugin": "^2.0.2",
+    "ts-lit-plugin": "2.0.2",
     "ts-node": "10.9.1",
-    "typescript": "~5.3.3",
-    "verdaccio": "^5.30.3",
-    "vite": "~5.0.13",
-    "vite-plugin-dts": "~2.3.0",
-    "vite-plugin-html": "^3.2.2",
-    "vitest": "^1.5.3"
+    "typescript": "5.3.3",
+    "verdaccio": "5.31.0",
+    "vite": "5.0.13",
+    "vite-plugin-dts": "2.3.0",
+    "vite-plugin-html": "3.2.2",
+    "vitest": "1.6.0"
   }
 }
