--- a/.github/workflows/dev-pipeline.yml
+++ b/.github/workflows/dev-pipeline.yml
@@ -26,30 +26,6 @@ jobs:
       - name: Run tests for all projects
         run: npx nx run-many --target=test --all
 
-#  run-release:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout repository
-#        uses: actions/checkout@v2
-#
-#      - name: Setup environment
-#        uses: ./.github/actions/setup-environment
-#        with:
-#          node-version: ${{ vars.NODE_VERSION }}
-#
-#      - name: Install dependencies for electron-dapp
-#        run: |
-#          cd apps/electron-dapp
-#          pnpm install --ignore-scripts
-#
-#      - name: Build electron
-#        run: npx nx run electron-dapp:build
-#
-#      - name: Release
-#        run: npx semantic-release
-#        env:
-#          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-
   release:
     runs-on: macos-latest
 
@@ -67,5 +43,7 @@ jobs:
           cd apps/electron-dapp
           pnpm install --frozen-lockfile
 
-      - name: Package electron app
-        run: npx nx run electron-dapp:build
+      - name: Release
+        run: npx semantic-release
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
