fix: fix base href for github pages

--- a/apps/electron-dapp/project.json
+++ b/apps/electron-dapp/project.json
@@ -18,7 +18,8 @@
         "cwd": "apps/electron-dapp",
         "parallel": false,
         "env": {
-          "killClone": "true"
+          "killClone": "true",
+          "BASE_HREF": "./"
         },
         "commands": [
           "nx run one-inch-community:build-all-libs",
