--- a/.github/workflows/dev-pipeline.yml
+++ b/.github/workflows/dev-pipeline.yml
@@ -7,6 +7,7 @@ on:
 
 env:
   GH_TOKEN: ${{ secrets.GH_TOKEN }}
+  DAPP_IS_PRODUCTION: true
 
 jobs:
   check:
@@ -69,6 +70,8 @@ jobs:
 
       - name: Build dApp
         run: nx run dapp:build
+        env:
+          BASE_HREF: "/interface/"
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
